# os_lab3

./: CMakeLists.txt
include/: marker.h
src/: main.cpp  marker.cpp
tests/: test_marker.cpp
